package lecture.week2.animals;

// This is the PRIMARY class.
public class Animal {

	private String sound = "default sound";

	public void move() {
		//do nothing
	}

	public String makeSound() {
		return sound;
	}

	private void breathe() {
		// inhale and exhale
	}

	private void wake() {
		// wake up
	}

	private void sleep() {
		// sleep when tired
	}

	private void eat() {
		// eat food
	}

}
