package lecture.week2.animals.species;

import lecture.week2.animals.Animal;

public class Cat extends Animal {

	@Override
	public String makeSound() {
		return "meow";
	}

}
